--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,10 @@
         android:layout_width="271dp"
         android:layout_height="69dp"
         android:layout_marginTop="216dp"
-        android:background="#66BDDFE4"
+        android:background="#BFB4CFBD"
         android:text="@string/ecomonitor"
         android:textAlignment="center"
-        android:textColor="#33200F"
+        android:textColor="#000000"
         android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,7 @@
         android:layout_width="117dp"
         android:layout_height="46dp"
         android:layout_marginTop="200dp"
-        android:backgroundTint="#9ADEE8"
+        android:background="@drawable/checkbox_background"
         android:text="@string/entrar"
         android:textColor="#000000"
         android:textSize="20dp"
