--- a/app/src/main/res/layout/activity_ecosys.xml
+++ b/app/src/main/res/layout/activity_ecosys.xml
@@ -42,19 +42,18 @@
 
             <TextView
                 android:id="@+id/username"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text=""
                 android:textAlignment="center"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
 
 
             <Button
                 android:id="@+id/configureUsernameBtn"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_gravity="left"
                 android:background="@drawable/ajustes"
                 android:onClick="changeUserName"
                 android:textColor="#000000"
@@ -84,7 +83,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
@@ -93,28 +92,28 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="match_parent"
+                    android:id="@+id/ecosysName"
+                    android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:paddingLeft="30dp"
                     android:text="Tortugas"
-                    android:textAlignment="textStart"
                     android:textAllCaps="false"
                     android:textColor="#000000"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
                 <Button
-                    android:id="@+id/configureEcosysnameBtn"
+                    android:id="@+id/configureEcosystemNameBtn"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_gravity="left|center_vertical"
                     android:background="@drawable/ajustes"
-                    android:onClick="changeEcosysName"
+                    android:onClick="changeUserName"
                     android:textColor="#000000"
                     android:textStyle="bold" />
+
+
             </LinearLayout>
 
             <LinearLayout
