--- a/app/src/main/res/layout/activity_terrario.xml
+++ b/app/src/main/res/layout/activity_terrario.xml
@@ -13,10 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@drawable/custom_text2"
+        android:background="@drawable/ecosistemas_background"
+        android:paddingLeft="15dp"
         android:paddingTop="15dp"
+        android:paddingRight="15dp"
         android:paddingBottom="15dp"
-        android:text="Variables de ecosistema"
+        android:text="Variables actuales"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="25sp"
@@ -31,6 +33,8 @@
         android:layout_marginBottom="20dp"
         android:gravity="center_horizontal|center_vertical"
         android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         app:layout_constraintBottom_toTopOf="@+id/backEcoSys"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@drawable/actuales_background2"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -57,6 +62,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_weight="1"
+                    android:background="@drawable/actuales_background"
                     android:orientation="vertical">
 
                     <TextView
@@ -65,7 +71,7 @@
                         android:layout_height="70dp"
                         android:gravity="center"
                         android:text="Temperatura aire (ºC)"
-                        android:textSize="25sp"
+                        android:textSize="16dp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -84,6 +90,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_weight="1"
+                    android:background="@drawable/actuales_background"
                     android:orientation="vertical">
 
                     <TextView
@@ -92,7 +99,7 @@
                         android:layout_height="70dp"
                         android:gravity="center"
                         android:text="CO2 aire (ppm)"
-                        android:textSize="25sp"
+                        android:textSize="16dp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -119,6 +126,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_weight="1"
+                    android:background="@drawable/actuales_background"
                     android:orientation="vertical">
 
                     <TextView
@@ -127,7 +135,7 @@
                         android:layout_height="70dp"
                         android:gravity="center"
                         android:text="Humedad aire (%)"
-                        android:textSize="25sp"
+                        android:textSize="16dp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -147,6 +155,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_weight="1"
+                    android:background="@drawable/actuales_background"
                     android:orientation="vertical">
 
                     <TextView
@@ -155,7 +164,7 @@
                         android:layout_height="70dp"
                         android:gravity="center"
                         android:text="Partículas aire (ppb)"
-                        android:textSize="25sp"
+                        android:textSize="16dp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -182,6 +191,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_weight="1"
+                    android:background="@drawable/actuales_background"
                     android:orientation="vertical">
 
                     <TextView
@@ -190,7 +200,7 @@
                         android:layout_height="70dp"
                         android:gravity="center"
                         android:text="Temperatura agua (ºC)"
-                        android:textSize="25sp"
+                        android:textSize="16dp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -208,6 +218,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_weight="1"
+                    android:background="@drawable/actuales_background"
                     android:orientation="vertical">
 
                     <TextView
@@ -216,7 +227,7 @@
                         android:layout_height="70dp"
                         android:gravity="center"
                         android:text="PH agua"
-                        android:textSize="25sp"
+                        android:textSize="16dp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -238,7 +249,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/custom_text2"
+        android:background="@drawable/ecosistemas_background"
         android:text="@string/volver"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
